k8s/overlays/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documents-service
  namespace: documents
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: documents-sa
      initContainers: []
