k8s/overlays/local/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documents-service
  namespace: documents
spec:
  type: ClusterIP
