k8s/overlays/local/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documents-ingress
  namespace: documents
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: documents.localtest.me
      http:
        paths:
          - path: /api/docs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: documents-service
                port:
                  number: 80
